--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,11 @@
   "version": "1",
   "browser_action": {
     "default_popup": "test.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["jquery.js", "application.js"]
+    }
+  ]
 }
